# manganese

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPILATION_FIXES.md  Cargo.toml  MIGRATION.md  Makefile  Makefile.windows  PR_MESSAGE.md  README.md  RUST_REWRITE_COMPLETE.md  build.rs  hardware.c  manganese.c  platform.h  tests-256.c  tests-256.h  tests-512.c  tests-512.h  tests.c
.cargo/: config.toml
.github/workflows/: build.yml  bundle-tinycore.yml  release.yml
ci/: remaster-tinycore.sh
manganese_core/: Cargo.toml
manganese_core/src/: config.rs  hardware.rs  lib.rs  platform.rs  simd_xorshift.rs  tests.rs  tests_avx2.rs  tests_avx512.rs
src/: gui.rs  hardware.rs  main.rs  platform.rs  simd_xorshift.rs  tests.rs  tests_avx2.rs  tests_avx512.rs
